# ids

./: .env.bak  .env.example  .gitignore  CLAUDE.md  CYJAN_Sentry_Brochure.docx  CyjanKali.md  README.md  TODO.md  VERSION  docker-compose.tap.yml  docker-compose.yml  swagger.json
alert-manager/: requirements.txt
api/: Dockerfile  requirements.txt
arpwatch/: Dockerfile
design-system/: INSTALL.md  README.md  SKILL.md  colors_and_type.css
docs/: ML_ENGINE.md  REDTEAM_v1.3.0.md  index.html
enrichment-service/: Dockerfile  requirements.txt
flow-aggregator/: Dockerfile  requirements.txt
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
fw-path-tracker/: .env.example  .gitignore  README.md  docker-compose.yml
host-role-detector/: requirements.txt
irma-bridge/: Dockerfile  requirements.txt
kali-shell/: Dockerfile  allowed_tools.yml  kali_runner.py  seccomp.json
master-uplink/: Dockerfile  requirements.txt
ml-engine/: Dockerfile  requirements.txt
mqtt-bridge/: requirements.txt
notification-dispatcher/: Dockerfile  requirements.txt
pcap-store/: requirements.txt
redteam-listener/: Dockerfile  listen.sh
redteam-orchestrator/: Dockerfile  requirements.txt
rule-tuner/: Dockerfile  requirements.txt
scripts/: cleanup-old-isos.sh  fix-network-interfaces.sh  post-update.sh  refresh-tap-update.sh
sniffer/: Cargo.toml  Dockerfile  entrypoint.sh
sniffer/src/: capture.rs  config.rs  main.rs  models.rs  parser.rs  publisher.rs  stats.rs
snort-bridge/: Dockerfile
(+406 files in other folders)
